feat: fetch event by user
